<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:clipToPadding="false"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    android:background="@color/myWhite"
    app:cardCornerRadius="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:weightSum="110"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/myGray"
            android:text="@string/fawDate"
            android:layout_weight="10"
            style="@style/IconMWhite"
            android:layout_width="0dp"
            android:layout_height="42dp" />

        <TextView
            android:id="@+id/tvDate"

            android:gravity="left|center_vertical"
            android:textColor="@color/myGray"
            android:text="5 октября 1990"
            android:layout_weight="40"
            style="@style/TVsmReg"
            android:layout_width="0dp"
            android:layout_height="42dp" />



        <TextView
            android:textColor="@color/myGray"
            android:text="@string/fawUsers"
            android:layout_weight="10"
            style="@style/IconMWhite"
            android:layout_width="0dp"
            android:layout_height="42dp" />

        <TextView
            android:id="@+id/tvCount"

            android:gravity="left|center_vertical"
            android:textColor="@color/myGray"
            android:text="14 клиентов"
            android:layout_weight="40"
            style="@style/TVsmReg"
            android:layout_width="0dp"
            android:layout_height="42dp" />


        <TextView
            android:id="@+id/tvShare"

            android:textColor="@color/myPink"
            android:text="@string/fawShare"
            android:layout_weight="10"
            style="@style/IconLWhite"
            android:layout_width="0dp"
            android:layout_height="42dp" />

    </LinearLayout>

</android.support.v7.widget.CardView>